--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -34,15 +34,15 @@ a:visited {
 }
 
 a:hover {
-    color: darken( $ci-1, 10% );
+    color: darken( $primary-color, 10% );
 }
 
 a:focus {
-    color: lighten( $ci-1, 20% );
+    color: lighten( $primary-color, 20% );
 }
 
 a:active {
-    color: darken( $ci-1, 20% );
+    color: darken( $primary-color, 20% );
 }
 
 
@@ -89,6 +89,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $header-font-family;
     font-weight: normal;
     padding: 0;
+    color: $isc-4;
 }
 
 h1 {
