Demote London 2016 info

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,7 +2,7 @@
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/isc-spring-2016/">ISC Summit</a></h3>
 		<p>
-		  Please join us at the next <a href="/InnerSourceCommons/events/isc-spring-2016/">InnerSource Commons Summit</a> in London, England on April 21-22. Sessions will continue developing our shared understanding of applying Open Source lessons to our organizations and highlighting what we have learned that works and what doesn't.
+		  Please join the discussion about the next InnerSource Commons Summit! We are expecting to hold it in Boston, USA in September of 2016.
 		</p>
 	</div>
 
