--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,8 +1,8 @@
 <aside>
 	<div class="panel radius">
-		<h3><a href="/InnerSourceCommons/events/isc-spring-2016/">ISC Summit</a></h3>
+		<h3><a href="/InnerSourceCommons/events/isc-fall-2016/">ISC Summit</a></h3>
 		<p>
-		  Please join the discussion about the next InnerSource Commons Summit! We are expecting to hold it in Boston, USA in September of 2016.
+		  Please join us at the next InnerSource Commons Summit! We will be meeting September 28-30 in Boston, USA.
 		</p>
 	</div>
 
