Add ignore attribute to top of page links. Evidence of issue #78.

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,6 +1,6 @@
     <div id="up-to-top" class="row">
       <div class="small-12 columns" style="text-align: right;">
-        <a class="iconfont" href="#top-of-page">&#xf108;</a>
+        <a class="iconfont" href="#top-of-page" data-proofer-ignore>&#xf108;</a>
       </div><!-- /.small-12.columns -->
     </div><!-- /.row -->
 
