fixed /patterns link

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,7 +1,7 @@
 <aside>
     <div class="panel radius">
         <h3><a href="http://www.oreilly.com/pub/e/3884">O'Reilly Webinar</a></h3>
-        <p>Learn about <a href="/patterns">InnerSource Patterns</a> at <em>Implementing InnerSource Patterns: Solve Organizational Problems by Leveraging Community Contributions</em>, Thursday, June 1, 2017, 9AM PDT, San Francisco | 12pm - New York | 5pm - London
+        <p>Learn about <a href="https://github.com/paypal/InnerSourcePatterns">InnerSource Patterns</a> at <em>Implementing InnerSource Patterns: Solve Organizational Problems by Leveraging Community Contributions</em>, Thursday, June 1, 2017, 9AM PDT, San Francisco | 12pm - New York | 5pm - London
         </p>
     </div>
 
