2017-06-06 changes for Fall Summit 2017

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,16 +1,16 @@
 <aside>
-    <div class="panel radius">
-        <h3><a href="http://www.oreilly.com/pub/e/3884">O'Reilly Webinar</a></h3>
-        <p>Learn about <a href="https://github.com/paypal/InnerSourcePatterns">InnerSource Patterns</a> at <em>Implementing InnerSource Patterns: Solve Organizational Problems by Leveraging Community Contributions</em>, Thursday, June 1, 2017, 9AM PDT, San Francisco | 12pm - New York | 5pm - London
-        </p>
-    </div>
-
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/isc-fall-2017/">ISC Summit</a></h3>
 		<p>
-		  Please join us at the next <a href="/InnerSourceCommons/events/isc-fall-2017/">InnerSource Commons Summit</a>! We will be meeting September 27-29 in Naperville, USA.
+        Please join us at the next <a href="/InnerSourceCommons/events/isc-fall-2017/">InnerSource Commons Summit</a>! We will be meeting September 27-29 in Naperville, USA. <b>The <a href="/InnerSourceCommons/events/isc-fall-2017-cfp/">Call for Presentations is open 2017-06-07 through 2017-07-15</a></b>.
 		</p>
 	</div>
+    <div class="panel radius">
+        <h3><a href="http://www.oreilly.com/pub/e/3884">O'Reilly Webinar</a></h3>
+        <p>Learn about <a href="https://github.com/paypal/InnerSourcePatterns">InnerSource Patterns</a> at <em>Implementing InnerSource Patterns: Solve Organizational Problems by Leveraging Community Contributions</em>, Thursday, June 1, 2017; the replay video is now available.
+        </p>
+    </div>
+
 	<div class="panel radius">
 	  <h3><a href="/InnerSourceCommons/assets/files/InnerSourceCommonsSurvey2016.pdf">InnerSource Survey</a></h3>
 	  <p>
