--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,4 +1,10 @@
 <aside>
+	<div class="panel radius">
+		<h3><a href="/InnerSourceCommons/events/isc-fall-2017/">ISC Summit</a></h3>
+		<p>
+      Join us at the next summit!  It will be posted on the <a href="/InnerSourceCommons/events/">events</a> page as dates and locations are finalized.
+		</p>
+	</div>
     <div class="panel radius">
         <h3><a href="http://www.oreilly.com/pub/e/3884">O'Reilly Webinar</a></h3>
         <p>Learn about <a href="https://github.com/paypal/InnerSourcePatterns">InnerSource Patterns</a> by watching the replay of the <em>Implementing InnerSource Patterns: Solve Organizational Problems by Leveraging Community Contributions</em> webinar from Thursday, June 1, 2017.
