Updating sidebar section title (ISC Events)

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,6 +1,6 @@
 <aside>
 	<div class="panel radius">
-		<h3><a href="/InnerSourceCommons/events/isc-fall-2017/">ISC Summit</a></h3>
+		<h3><a href="/InnerSourceCommons/events/">ISC Events</a></h3>
 		<p>
       Join us at the next summit!  It will be posted on the <a href="/InnerSourceCommons/events/">events</a> page as dates and locations are finalized.
 		</p>
