2018-01-04 attempting a fix of _sidebar

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,7 +2,7 @@
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/">ISC Events</a></h3>
 		<p>
-        Join us at the spring 2018 summit May 16-18, 2018! 
+        Join us at the ISC Spring 2018 Summit (ISC.S6) May 16-18, 2018! 
 		</p>
 	</div>
     <div class="panel radius">
