--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,7 +2,7 @@
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/">ISC Events</a></h3>
 		<p>
-        Join us at the ISC Spring 2018 Summit (ISC.S6) May 16-18, 2018! 
+                Join us at the <a href="/InnerSourceCommons/events/isc-spring-2018/">spring 2018 summit</a> May 16-18, 2018! The <a href="/InnerSourceCommons/events/isc-spring-2018-cfp/">Call For Papers</a> is open through February 28, 2018. Presenters of accepted papers will be notified March 31, 2018. 
 		</p>
 	</div>
     <div class="panel radius">
