--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url }}/assets/css/style.css">
 
 	<script src="{{ url }}/assets/js/modernizr.min.js"></script>
+    <script src="{{ url }}/assets/js/events.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 	<script>
