--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -2,12 +2,10 @@
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/">ISC Events</a></h3>
 		<p>
-        Please join us on the <a href="/InnerSourceCommons/events/isc-fall-2018/">fall 2018 summit</a>, which will take place on October 3-5 in Islandia, New York, USA. The <a href="https://www.brownpapertickets.com/event/3444630" alt="Registration">registration</a> and <a href="/InnerSourceCommons/events/isc-fall-2018-cfp/">call for papers</a> is now open through June 2018.
-        </p>
-        <p>
-        The <a href="/InnerSourceCommons/events/isc-spring-2018/">spring 2018 summit</a> is a wrap! Thanks to all participants and especially our speakers for making it such an engaging and interesting experience. We have published the links to pictures and videos on the <a href="/InnerSourceCommons/events/isc-spring-2018/" alt="ISC.S6">event page</a>, now.
+        The <a href="/InnerSourceCommons/events/isc-spring-2018/">spring 2018 summit</a> May 16-18, 2018 is now over, with its agenda packed with interesting <a href="http://paypal.github.io/InnerSourceCommons/events/isc-spring-2018-speakers" alt="Our speakers">speakers</a> and <a href="http://paypal.github.io/InnerSourceCommons/events/isc-spring-2018-agenda" alt="Our presentations">presentations</a>. The group photo from Renningen, Germany will be posted soon.</p>
 		<p>
-	</p>
+		  It's now time to consider the <a href="/InnerSourceCommons/events/isc-fall-2018/">fall 2018 summit</a> October 3-5 in Islandia, New York, USA. The <a href="/InnerSourceCommons/events/isc-fall-2018-cfp/">Call For Papers</a> is now open through July 2018.
+		</p>
 	</div>
     <div class="panel radius">
         <h3><a href="http://www.oreilly.com/pub/e/3884">O'Reilly Webinar</a></h3>
