--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,7 +1,7 @@
 <aside>
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/">ISC Events</a></h3>
-        The <a href="http://paypal.github.io/InnerSourceCommons/events/isc-spring-2019/">Spring 2019 summit</a> will be held in Galway, Ireland from 9-11 April 2019. We look forward to another exciting lineup and thought leadership speakers. Hope to see you there! 	
+        The <a href="/InnerSourceCommons/events/isc-spring-2019/">Spring 2019 summit</a> will be held in Galway, Ireland from 9-11 April 2019. We look forward to another exciting lineup and thought leadership speakers. Hope to see you there! 	
 		</p>
         <p>The <a href="/InnerSourceCommons/events/isc-fall-2018/">Fall 2018 summit</a> October 3-5, is now over, with its impressive <a href="http://paypal.github.io/InnerSourceCommons/events/isc-fall-2018-agenda" alt="Agenda">Agenda</a> and exciting lineup of <a href="http://paypal.github.io/InnerSourceCommons/events/isc-fall-2018-speakers" alt="Speakers"> Speakers</a> and thought leadership. The group photo from Islandia, NY is now on the <a href="/InnerSourceCommons/events/isc-fall-2018/">ISC.S7 event page</a>.</p>
         <p><a href="/events">Information on past events</a> is available.</p>
